--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 
         <span class="price"> $149.99 </span>
         <span class="old_price"> $169.99 </span>
-        <a class="add" href="#">Add to Cart</a>
+        <a class="add" href="#"
+          ><span><img src="./images/icon-cart.svg" alt="cart icon" /></span> Add
+          to Cart</a
+        >
       </div>
     </div>
 
