fixed missing landmark

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <div class="card">
+    <main role="main" class="card">
       <div class="col1"></div>
       <div class="col2">
         <p class="perfume">perfume</p>
@@ -45,14 +45,14 @@
           to Cart</a
         >
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by
       <a href="https://andrew-ghaly.click" target="_blank">Andrew G. Ayad</a>.
-    </div>
+    </footer>
   </body>
 </html>
