fixed role/main html/issue

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <main role="main" class="card">
+    <main class="card">
       <div class="col1"></div>
       <div class="col2">
         <p class="perfume">perfume</p>
